[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main/Editor/CodeArea/CodeColumn.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.182098, 0.304688, 0.248965, 1 )

[node name="CodeColumn" type="PanelContainer"]
margin_right = 64.0
margin_bottom = 118.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 59.0
margin_bottom = 113.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 54.0
margin_bottom = 20.0

[node name="SelectButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 54.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
toggle_mode = true
text = "o"

[node name="RemoveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 35.0
margin_right = 54.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
disabled = true
text = "x"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 54.0
margin_bottom = 24.0
